<resources>
    <string name="app_name">Fitness Tracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="register_form">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="facebook_app_id">861040667339792</string>

    <!-- related to register a user -->
    <string name="first_name">* First Name</string>
    <string name="last_name">* Last Name</string>
    <string name="email">* Email</string>
    <string name="password">* Password</string>
    <string name="confirm_password">* Confirm Password</string>
    <string name="next_button">Next</string>
    <string name="req_field">* Required Field</string>
    <string name="password_mis_match">The password did not match!</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="addImageString">Add Image (optional)</string>
    <string name="birthDay">Date of Birth:</string>

    <string-array name="Day_array">
        <item>Date</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="month_array">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="gender_array">
        <item>M</item>
        <item>F</item>
    </string-array>

    <string-array name="actityLevel_array">
        <item>Sedentary</item>
        <item>Moderately active</item>
        <item>Vigorously active</item>
        <item>Extremely active</item>
    </string-array>

    <string-array name="daysToWorkout_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="year_str">Year:</string>
    <string name="year_hint">Enter year of Birth (Ex: 1999)</string>
    <string name="enter_weightStr">Weight:  </string>
    <string name="weight_hint">Enter your weight (Ex: 160)lbs</string>
    <string name="height_str">Height:</string>
    <string name="heightFt_hint">Feet</string>
    <string name="heightIn_hint">Inches</string>
    <string name="register_str">Register</string>
    <string name="cancel_str">Cancel</string>
    <string name="error_day_required">Choose a valid Date</string>
    <string name="error_month_required">Choose a Month</string>
    <string name="gender_str">Gender:</string>
    <string name="activityLv_str">Activity Level:</string>
    <string name="dayToWorkout_str">Choose # of days to Workout:</string>
    <string name="daysWoinkigOut_str">Number of Days Workingout:</string>
    <string name="register_user">register user</string>
    <string name="edit_str">Edit</string>
    <string name="personal_infoStr">Personal Information</string>
    <string name="lastLoggedWorkout_Str">Last Logged Workout</string>
    <string name="workoutName_Str">Workout Name: </string>
    <string name="dateCompleted_Str">Date Completed: </string>
    <string name="workoutNumber_Str">Workout Number: </string>
    <string name="viewLog_Str">View Workout</string>
    <string name="save_str">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_delete">Fitness Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logged_in">loggedin</string>
    <string name="LOGIN_PREFS">edu.uw.tacoma.jonahkh.fitnesstracker.PREFS</string>
    <string name="last_workout">last workout</string>
    <string name="days_working_out">days working out</string>
    <string name="ON">on</string>
    <string name="CURRENT_WORKOUT">edu.uw.tacoma.jonahkh.fitnesstracker.CURRENT_WORKOUT</string>
    <string name="current_set">current_set</string>
    <string name="current_email">email</string>
    <string name="dashboard_home">Home</string>
    <string name="workout_templates">Workout Templates</string>
    <string name="logged_weight_workouts">Logged Weight Workouts</string>
    <string name="logged_cardio_workouts">Logged Cardio Workouts</string>
    <string name="logout">Logout</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="CardioExercises">Cardio Exercises</string>
    <string name="no_cardioExe_to_display"> No Logged Workouts to Display!</string>
    <string name="DASHBOARD_PREFS">edu.uw.tacoma.jonahkh.fitnesstracker.DASHBOARD_PREFS</string>
    <string name="next_cardio_exercise_num">Next Cardio Exercise Number</string>
    <string name="activity">*Activity:</string>
    <string name="cardio_activity_hint">Enter name of Cardio Activity</string>
    <string name="duration">*Duration:</string>
    <string name="minutes">Minutes</string>
    <string name="distance">Distance:</string>
    <string name="miles">Miles</string>
    <string name="new_cardio_activity">New Cardio Activity</string>
    <string name="cardio_workout_succ">Cardio Workout Successful</string>
    <string name="invalid_input">Invalid Input!</string>
    <string name="local_data_message">No network connection available. Displaying locally stored data</string>
    <string name="adding_cardio_workout_noNet">Can not add a Cardio Workout without internet</string>
    <string name="end_workout">End Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="reset">Reset</string>
    <string name="enter">Enter</string>
    <string name="send_code">Send Code</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="profile_pic_file_name">Profile Pic File Name</string>
    <string name="addPictureTask_error">Unable to add image to database!</string>
    <string name="view_previous_pictures">View Previous Pictures</string>
    <string name="icon">icon</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="cancel">Cancel</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="add_set">Add Set</string>
    <string name="number_0">-- NUMBER 0 --</string>
    <string name="running">-- RUNNING --</string>
    <string name="_3_85_miles">3.85 Miles</string>
    <string name="enable_notifications">Enable Notifications?</string>
    <string name="code">Code</string>
    <string name="workout_name">Workout Name</string>
    <string name="start_workout">Start Workout</string>
    <string name="no_prev_pic_message">No Previous Pictures to Display</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
