<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_drawer">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/dashboard_home"
            android:icon="@drawable/ic_dashboard"/>
        <item
            android:id="@+id/nav_predefined_workouts"
            android:icon="@drawable/ic_workout_template"
            android:title="@string/workout_templates" />
        <item
            android:id="@+id/view_logged_workouts"
            android:icon="@drawable/ic_weight_workouts"
            android:title="@string/logged_weight_workouts" />
        <item
            android:id="@+id/view_logged_cardio_workouts"
            android:title="@string/logged_cardio_workouts"
            android:icon="@drawable/ic_cardio_menu"/>
    </group>

</menu>
