<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:hint="@string/enter_new_password"
        android:id="@+id/first_pass"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"
        android:id="@+id/second_pass"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/reset"
        android:layout_gravity="end"
        android:id="@+id/button"/>
</LinearLayout>