<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dashboard.AddCardioWorkout">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_cardio_activity"
        android:textColor="@android:color/background_dark"
        android:layout_gravity="center_horizontal" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:id="@+id/cardio_activity_name"
            android:hint="@string/cardio_activity_hint"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="15sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:id="@+id/cardio_activity_duration"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:id="@+id/cardio_activity_distance"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/miles"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"/>
    </TableRow>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_str"
            android:id="@+id/cardio_activity_cancel"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/save_str"
            android:id="@+id/cardio_activity_save"
            android:layout_marginRight="34dp"
            android:layout_marginEnd="34dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>
