<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".dashboard.DashboardDisplayFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="36dp">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_str"
            android:id="@+id/dashB_editPersonalBt"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/personal_infoStr"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/weight_dash"
            android:text="@string/enter_weightStr"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/dashB_weightV"
            android:layout_toRightOf="@+id/weight_dash"
            android:paddingLeft="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/act_lvl"
            android:text="@string/activityLv_str"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/dashB_activityLevelV"
            android:layout_toRightOf="@+id/act_lvl"
            android:paddingLeft="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/wrkout"
            android:text="@string/daysWoinkigOut_str"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/dashB_daysWorkingOutV"
            android:layout_toRightOf="@+id/wrkout"
            android:paddingLeft="5dp"/>
    </RelativeLayout>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/toggle_notifications"
        android:text="@string/enable_notifications"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lastLoggedWorkout_Str"
        android:paddingTop="10dp"
        android:gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/wrkname"
            android:text="@string/workoutName_Str"/>

        <TextView
            android:id="@+id/dashB_workoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/wrkname"
            android:paddingLeft="5dp"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/datecompleted"
            android:text="@string/dateCompleted_Str" />

        <TextView
            android:id="@+id/dashB_workoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/datecompleted"
            android:paddingLeft="5dp"
            android:textSize="15sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/workoutNumber_Str"
            android:id="@+id/wrknum"/>

        <TextView
            android:id="@+id/dashB_workoutNumber"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@+id/wrknum"/>
    </RelativeLayout>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewLog_Str"
        android:id="@+id/dasbB_viewLog_bt"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_dark"/>
</LinearLayout>

