<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="match_parent"
        android:id="@+id/enter_exercise_name"
        android:hint="@string/exercise_name"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_exercise"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_exercise"
            android:layout_toRightOf="@+id/cancel_exercise"
            android:text="@string/add_exercise"/>


    </RelativeLayout>
</LinearLayout>

