<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_0"
        android:textColor="#FA0202"
        android:gravity="center_horizontal"
        android:id="@+id/cardio_exercise_number"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:textAppearance="?attr/textAppearanceListItem"
            android:id="@+id/cardio_exercise_name"
            android:layout_gravity="left"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_85_miles"
            android:textAppearance="?attr/textAppearanceListItem"
            android:id="@+id/cardio_exercise_distance"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:textAppearance="?attr/textAppearanceListItem"
            android:id="@+id/cardio_exercise_date"
            android:layout_gravity="left"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_85_miles"
            android:textAppearance="?attr/textAppearanceListItem"
            android:id="@+id/cardio_exercise_duration"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
